2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-12  Rodney Dawes  <dobey@ximian.com>

	* gnome-wp-xml.c (gnome_wp_load_legacy): Fix previous change to
	use gnome_wp_item_free () instead of g_free (), and fix tab width

2004-01-12  Diego Gonzalez <diego@pemas.net>

	* gnome-wp-xml.c (gnome_wp_load_legacy): don't crash if we could
	  not get the file information.

2004-01-12  Jody Goldberg <jody@gnome.org>

	* Makefile.am : As long as we're hard coding the path hard code it in
	  only one place.  Passing in datadir then adding the magic subdir in
	  C then building in Makefile seems unnecessary.
	  Use GNOMECC_CAPPLETS_*

2004-01-12  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am: Add install hook to create data directory

2004-01-12  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am: Update for new capplet
	* background.desktop.in: Update Name/Comment/Exec entries
	* gnome-wp-capplet.[ch]:
	* gnome-wp-info.[ch]:
	* gnome-wp-item.[ch]:
	* gnome-wp-utils.[ch]:
	* gnome-wp-xml.[ch]: Add new capplet code to CVS

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

Fri Nov 21 09:42:19 2003  Jonathan Blandford  <jrb@gnome.org>

	* background-properties.glade: Remove translatable radiobutton
	strings, #119288

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* background-properties-capplet.c, background-properties.glade: 
	Patch to fix spacing between action area and vbox of preferences 
	dialog.
	
2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* background-properties.glade, 
	  background-properties-capplet.c:  Fixes for ui-review
	  bug report #98916 and duplicate mnemonic fixes.
	  
2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1
