@@ -1,3 +1,7 @@
+2004-01-16  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* Makefile.am: Add DESTDIR variable in install-data-hook section.
+
 2004-01-15  Bastien Nocera  <hadess@hadess.net>
 
 	* gnome-settings-multimedia-keys.c: fix locating the
