@@ -1,3 +1,7 @@
+2004-01-16  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* Makefile.am: add DESTDIR variable in install-data-local section.
+
 2004-01-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.2
